# glfw

./: .gitignore  CMakeLists.txt  premake5.lua
include/GLFW/: glfw3.h
src/: cocoa_init.m  cocoa_window.m  internal.h  null_init.c  win32_init.c  win32_platform.h  win32_window.c  window.c  wl_window.c  x11_init.c  x11_window.c
